--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,22 +7,23 @@
 
 project(Tests)
 
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Vendor/Catch2")
-
 add_executable(${PROJECT_NAME} 
 "Source/Main.cpp"
 "Source/StackAllocatorTest.cpp"
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC "Source")
-target_include_directories(${PROJECT_NAME} PUBLIC "../Include")
+target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/Include")
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2)
+target_link_libraries(${PROJECT_NAME} PRIVATE gtest_main)
 target_link_libraries(${PROJECT_NAME} PRIVATE MemoryManager)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/Catch2/extras")
+# list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/Catch2/extras")
 
-include(CTest)
-include(Catch)
+# include(CTest)
+# include(Catch)
 
-catch_discover_tests(${PROJECT_NAME})
+# catch_discover_tests(${PROJECT_NAME})
+
+include(GoogleTest)
+gtest_discover_tests(${PROJECT_NAME})
