--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(${PROJECT_NAME} STATIC
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
-target_precompile_headers(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Include/MemoryManager/PCH.hpp")
+target_precompile_headers(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/PCH.hpp")
 
 target_compile_definitions(${PROJECT_NAME}
     PRIVATE
@@ -44,10 +44,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE "${CPP_LINKER_FLAGS}")
 
 
 enable_testing()
-add_subdirectory("${CMAKE_SOURCE_DIR}/Vendor/googletest")
-add_subdirectory("${CMAKE_SOURCE_DIR}/Vendor/benchmark")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Vendor/googletest")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Vendor/benchmark")
 
-add_subdirectory("${CMAKE_SOURCE_DIR}/Tests")
-add_subdirectory("${CMAKE_SOURCE_DIR}/Benchmarks")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Tests")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Benchmarks")
 # add_subdirectory("${CMAKE_SOURCE_DIR}/Benchmarks")
 
