--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -13,7 +13,7 @@ add_executable(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC "Source")
-target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/Include")
+target_include_directories(${PROJECT_NAME} PUBLIC "../Include")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE gtest_main)
 target_link_libraries(${PROJECT_NAME} PRIVATE MemoryManager)
