--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,34 +7,39 @@
 
 project(Tests)
 
+conan_cmake_configure(REQUIRES gtest/1.10.0
+                      OPTIONS gtest:build_gmock=False
+                      GENERATORS cmake_find_package cmake_paths)
+
+conan_cmake_autodetect(settings)
+
+conan_cmake_install(PATH_OR_REFERENCE .
+                    BUILD missing
+                    REMOTE conancenter
+                    SETTINGS ${settings})
+
 add_executable(${PROJECT_NAME} 
 "Source/Main.cpp"
 "Source/StackAllocatorTest.cpp"
 "Source/MemoryManagerTest.cpp"
 )
 
-target_include_directories(${PROJECT_NAME} PUBLIC "Source")
-target_include_directories(${PROJECT_NAME} PUBLIC "../Include")
+target_include_directories(${PROJECT_NAME} PRIVATE "Source")
 
-target_link_libraries(${PROJECT_NAME} PRIVATE gtest_main)
+include("${CMAKE_BINARY_DIR}/${PROJECT_NAME}/conan_paths.cmake")
+find_package(GTest REQUIRED)
+add_dependencies(${PROJECT_NAME} GTest::gtest)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest)
 target_link_libraries(${PROJECT_NAME} PRIVATE MemoryManager)
 
-target_compile_definitions(${PROJECT_NAME}
-    PRIVATE
-      _CRT_SECURE_NO_WARNINGS
-    PUBLIC
-      $<$<CONFIG:Debug>:MEMORY_MANAGER_DEBUG>
-      $<$<CONFIG:RelWithDebInfo>:MEMORY_MANAGER_DEBUG>
-      $<$<CONFIG:Release>:MEMORY_MANAGER_RELEASE>
-      $<$<CONFIG:MinSizeRel>:MEMORY_MANAGER_RELEASE>
-)
-
-# list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Vendor/Catch2/extras")
-
-# include(CTest)
-# include(Catch)
-
-# catch_discover_tests(${PROJECT_NAME})
+# target_compile_definitions(${PROJECT_NAME}
+#     PUBLIC
+#       $<$<CONFIG:Debug>:MEMORY_MANAGER_DEBUG>
+#       $<$<CONFIG:RelWithDebInfo>:MEMORY_MANAGER_DEBUG>
+#       $<$<CONFIG:Release>:MEMORY_MANAGER_RELEASE>
+#       $<$<CONFIG:MinSizeRel>:MEMORY_MANAGER_RELEASE>
+# )
 
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
