--- a/Benchmarks/CMakeLists.txt
+++ b/Benchmarks/CMakeLists.txt
@@ -9,6 +9,17 @@ project(Benchmarks)
 
 set(BENCHMARK_CPP_LINKER_FLAGS "-lpthread")
 
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+  message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+  file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
+                "${CMAKE_BINARY_DIR}/conan.cmake"
+                EXPECTED_HASH SHA256=396e16d0f5eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
+                TLS_VERIFY ON)
+endif()
+
+include("${CMAKE_BINARY_DIR}/conan.cmake")
+
+
 conan_cmake_configure(REQUIRES gtest/1.10.0 benchmark/1.6.0
                       OPTIONS gtest:build_gmock=False
                       GENERATORS cmake_find_package cmake_paths)
