--- a/Benchmarks/CMakeLists.txt
+++ b/Benchmarks/CMakeLists.txt
@@ -5,7 +5,7 @@
 # executable for the Benchmarks
 # ===================================================
 
-project(Benchmarks)
+project(MemarenaBenchmarks)
 
 set(BENCHMARK_CPP_LINKER_FLAGS "-lpthread")
 
@@ -34,6 +34,7 @@ conan_cmake_install(PATH_OR_REFERENCE .
 add_executable(${PROJECT_NAME} 
 "Source/Main.cpp"
 "Source/StackAllocatorAllocationsBenchmark.cpp"
+"Source/StackAllocatorArrayAllocationsBenchmark.cpp"
 "Source/StackAllocatorAccessBenchmark.cpp"
 "Source/AlignmentBenchmark.cpp"
 )
