Update Github workflows

--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -45,7 +45,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Set up GCC
-        if:  ${{ matrix.compiler == "gcc"}}
+        if:  ${{ matrix.compiler == 'gcc'}}
         uses: egor-tensin/setup-gcc@v1
         with:
           version: latest
