--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -32,6 +32,7 @@ conan_cmake_install(PATH_OR_REFERENCE .
 add_executable(${PROJECT_NAME} 
 "Source/Main.cpp"
 "Source/StackAllocatorTest.cpp"
+"Source/LinearAllocatorTest.cpp"
 "Source/AlignmentTest.cpp"
 "Source/MemoryManagerTest.cpp"
 )
