--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ endif()
 add_library(${PROJECT_NAME} STATIC
 "Source/Allocator.cpp"
 "Source/AllocatorUtils.cpp"
-"Source/MemoryManager.cpp"
+"Source/MemoryTracker.cpp"
 "Source/Utility/Alignment.cpp"
 )
 
