--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -33,6 +33,7 @@ conan_cmake_install(PATH_OR_REFERENCE .
 add_executable(${PROJECT_NAME} 
 "Source/Main.cpp"
 "Source/StackAllocatorTest.cpp"
+"Source/FallbackAllocatorTest.cpp"
 "Source/LinearAllocatorTest.cpp"
 "Source/PoolAllocatorTest.cpp"
 "Source/MallocatorTest.cpp"
